src/tests/fixtures/extend_type/fieldAsArrowFunctionNotExported.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
class SomeType {
  // No fields
}

/** @gqlField */
const greeting = (_: SomeType): string => {
  return `Hello World`;
};

-----------------
OUTPUT
-----------------
-- Error Report --
src/tests/fixtures/extend_type/fieldAsArrowFunctionNotExported.invalid.ts:7:7 - error: Expected `@gqlField` to be an exported top-level declaration. Grats needs to import resolver functions into it's generated schema module, so the resolver function must be exported from the module.

7 const greeting = (_: SomeType): string => {
        ~~~~~~~~


-- Code Action: "Add export keyword to exported arrow function with @gqlField" (add-export-keyword-to-arrow-function) --
- Original
+ Fixed

@@ -6,3 +6,3 @@
  /** @gqlField */
- const greeting = (_: SomeType): string => {
+ export const greeting = (_: SomeType): string => {
    return `Hello World`;